split app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,115 +1,4 @@
 <div class="flex flex-col h-screen bg-sky-100">
-  <header
-    class="flex items-center h-20 px-12 text-4xl text-white font-bold bg-sky-600"
-  >
-    My Recipes
-  </header>
-  <main class="flex flex-1 px-12 py-6 gap-4">
-    <section class="flex flex-col flex-1">
-      <button
-        class="w-36 h-12 text-white font-bold rounded bg-green-600"
-        (click)="onAddRecipe()"
-      >
-        New recipe
-      </button>
-      <div class="flex flex-col flex-1 gap-2 mt-4">
-        <div
-          class="flex p-2 rounded-md bg-white"
-          *ngFor="let recipe of recipes"
-        >
-          <div class="flex flex-col flex-1">
-            <div class="flex flex-1 items-center text-xl truncate">
-              {{ recipe.name }}
-            </div>
-            <div class="flex flex-1 items-center text-lg truncate">
-              {{ recipe.description }}
-            </div>
-          </div>
-          <span class="w-20 h-20">
-            <img [src]="recipe.image" [alt]="recipe.name" />
-          </span>
-        </div>
-      </div>
-    </section>
-    <section class="flex flex-col flex-1" *ngIf="isAddRecipeVisible">
-      <h2 class="text-2xl font-bold my-4">Add new recipe</h2>
-      <label for="recipe-name">Recipe name:</label>
-      <input
-        id="recipe-name"
-        class="w-full h-12 px-4 border rounded"
-        [(ngModel)]="recipeName"
-      />
-      <label for="recipe-description" class="mt-2">Recipe description:</label>
-      <input
-        id="recipe-description"
-        class="w-full h-12 px-4 border rounded"
-        [(ngModel)]="recipeDescription"
-      />
-      <label for="recipe-image" class="mt-2">Recipe image:</label>
-      <input
-        id="recipe-image"
-        class="w-full h-12 px-4 border rounded"
-        [(ngModel)]="recipeImage"
-      />
-      <h3 class="text-xl font-bold my-4">Ingredients:</h3>
-      <div class="flex gap-4">
-        <div class="flex flex-col flex-1">
-          <label for="ingredient-name">Ingredient name:</label>
-          <input
-            id="ingredient-name"
-            class="h-12 px-4 border rounded"
-            [(ngModel)]="ingredientName"
-          />
-        </div>
-        <div class="flex flex-col">
-          <label for="ingredient-amount">amount:</label>
-          <input
-            id="ingredient-amount"
-            class="w-24 h-12 px-4 border rounded"
-            [(ngModel)]="ingredientAmount"
-          />
-        </div>
-        <button
-          class="h-12 p-4 mt-auto text-white font-bold rounded bg-green-600"
-          [disabled]="ingredients.length <= 0"
-          (click)="onIngredientAdded()"
-        >
-          Add
-        </button>
-      </div>
-      <div class="flex-1 py-4 space-y-2">
-        <div class="flex p-2 gap-4 rounded-md bg-white">
-          <p class="flex-1 text-md">name:</p>
-          <p class="w-40 text-md">amount</p>
-        </div>
-        <div
-          class="flex p-2 gap-4 rounded-md bg-white"
-          *ngFor="let ingredient of ingredients"
-        >
-          <p class="flex-1 text-md">{{ ingredient.name }}</p>
-          <p class="w-40 text-md">{{ ingredient.amount }}</p>
-        </div>
-      </div>
-      <div class="flex">
-        <button
-          class="w-36 h-12 text-white font-bold rounded mr-auto bg-red-600"
-          (click)="onRecipeCancel()"
-        >
-          Cancel
-        </button>
-        <button
-          class="w-36 h-12 text-white font-bold rounded bg-green-600"
-          [disabled]="
-            !recipeName ||
-            !recipeDescription ||
-            !recipeImage ||
-            !ingredients.length
-          "
-          (click)="onRecipeAdded()"
-        >
-          Add recipe
-        </button>
-      </div>
-    </section>
-  </main>
+  <app-header></app-header>
+  <app-recipes></app-recipes>
 </div>
